# just-show-me-the-recipe

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: format.yml  lint.yml  tests.yml
app/: main.py  models.py
app/parser/: heuristic.py  ingredients.py  pipeline.py  scrapers.py  structured.py
app/static/: app.js  recipe-linker.js  recipe-scaler.js  style.css
app/templates/: base.html  error.html  index.html  recipe.html
tests/: test_heuristic.py  test_ingredients.py  test_pipeline.py  test_routes.py  test_validation.py
