[project]
name = "justshowmetherecipe"
version = "0.1.0"
description = "Web app that extracts recipes from URLs, stripping away blog content and ads."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "httpx",
    "extruct",
    "recipe-scrapers",
    "python-multipart",
    "slowapi",
    "cachetools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "anyio",
    "httpx",
]

[tool.black]
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]
color = true
